--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,3 +24,16 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 5%;
+  margin-right: 5%; 
+  /*
+  justify-content: center;
+  justify-items: center;
+  align-items: center;    
+  align-content: space-between;
+*/
+}
