Add css of tweet box

--- a/public/styles/new_tweet.css
+++ b/public/styles/new_tweet.css
@@ -1,4 +1,5 @@
 .new-tweet form {
+  margin-top: 1em;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -6,7 +7,9 @@
 }
 
 .new-tweet textarea {
+  outline: 0;
   border: 0;
+  resize: none;
   color: #545149;
   background-color: #f4f1ec;
   border-bottom: 0.2em solid;
