--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -15,7 +15,10 @@
 
 nav > span {
   font-family: 'Bungee', cursive;
+}
 
+#toggle-new-tweet > span {
+  margin-bottom : 0.8em;
 }
 
 .nav-bar .textlogo {
@@ -30,4 +33,10 @@ nav > span {
   flex-shrink: 0;
   flex-direction: column;
   align-items: center;
+  height: 100%;
+  padding-top: 1.5em;
+}
+
+.newtweet:hover{
+  cursor: pointer; 
 }
