--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,5 +1,20 @@
-#tweets-container {
+#tweets-container .hidden{
   margin-bottom: 2em;
+}
+
+.new-tweet .hidden {
+  display: none;
+}
+
+.new-tweet .error-message {
+  border: 0.2em solid red;
+  color: red;
+  padding: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  height: 100%;
+  text-align: center;  
+  font-weight: bold;
 }
 
 .tweet-individual-container {
@@ -49,13 +64,13 @@
 }
 
 .tweet-msg {
-  height: 3em;
+  height: 3.5em;
   width: 100%;
   padding: 0.5em;
   margin: 0em;
-  margin-top: 0.5em;
   align-items: center;
   border-bottom: 0.2em solid;
+  overflow: auto;
   overflow-wrap: break-word; 
 }
 
@@ -72,6 +87,15 @@
   float: right;
   padding-left: 0.5em;
   text-decoration:none;
+}
+
+a#move-to-top {
+  position: fixed;
+  right: 2%;
+  bottom: 50px;
+  display: none;
+  z-index: 999;
+  color: red;
 }
 
 .tweet-footer > div > a:link {
