--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,6 +30,7 @@ body {
   flex-direction: column;
   margin-left: 5%;
   margin-right: 5%; 
+  margin-bottom: 2%; 
   /*
   justify-content: center;
   justify-items: center;
@@ -37,3 +38,12 @@ body {
   align-content: space-between;
 */
 }
+
+  /* Another tablet breakpoint is maximum width of 1024px */
+  @media only screen and (min-width: 1024px) {
+    .container {
+      width: 50%; /* margin 10% (.avatar 40%)*/  
+      margin-top: 140px;    
+      float: right;
+    }
+  }
