--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,7 +4,8 @@
   display:flex; 
   height: 120px;
   width: 100%;
-  background-color: #4056A1;
+  background-color: sandybrown; 
+  background-image: url('/images/greyzz.png');
   color: #FFFF;
   padding-left: 1.5em;
   padding-right: 1.5em;
@@ -39,4 +40,12 @@ nav > span {
 
 .newtweet:hover{
   cursor: pointer; 
+}
+
+/* Another tablet breakpoint is maximum width of 1024px */
+@media only screen and (min-width: 1024px) {
+  .nav-bar  {
+    background-color: #4056A1;
+    background-image: none;
+  }
 }
