--- a/public/styles/new_tweet.css
+++ b/public/styles/new_tweet.css
@@ -1,3 +1,16 @@
+.new-tweet .error-message {
+  border: 0.2em solid red;
+  color: red;
+  padding: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  height: 100%;
+  text-align: center;
+  font-weight: bold;
+}
+.new-tweet .hidden {
+  display: none;
+}
 .new-tweet form {
   margin-top: 1em;
   display: flex;
@@ -5,7 +18,22 @@
   width: 100%;
   font-weight: bold;
 }
-
+.new-tweet form div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-family: "Bungee", cursive;
+  margin-top: 0.5em;
+  width: 100%;
+}
+.new-tweet form div button {
+  border: 0;
+  color: #ffffff;
+  background-color: #4056A1;
+}
+.new-tweet form div .overlimit {
+  color: red;
+}
 .new-tweet textarea {
   outline: 0;
   border: 0;
@@ -13,23 +41,4 @@
   color: #545149;
   background-color: #f4f1ec;
   border-bottom: 0.2em solid;
-}
-
-.new-tweet form div {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  font-family: 'Bungee', cursive;
-  margin-top: 0.5em;
-  width: 100%;
-}
-
-.new-tweet form div button {
-  border: 0;
-  color: #ffffff;
-  background-color: #4056A1;
-}
-
-.overlimit {
-  color: red;
 }
