--- a/sass/header.scss
+++ b/sass/header.scss
@@ -6,15 +6,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: sandybrown;
-  background-image: url("/images/greyzz.png");
+  background-color: sandybrown; 
+  background-image: url('/images/greyzz.png');
 }
 
 /* Another tablet breakpoint is maximum width of 1024px */
 @media only screen and (min-width: 1024px) {
   .avatar {
     position: fixed;
-    width: 40%;
+    width: 40%;      
     float: left;
     margin-top: 140px;
   }
