--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -6,7 +6,6 @@
 html {
   box-sizing: border-box;
 }
-
 *, *:before, *:after {
   box-sizing: inherit;
 }
@@ -14,7 +13,7 @@ html {
 body {
   color: #545149;
   background-color: #f4f1ec;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 24px;
 }
 
@@ -22,16 +21,15 @@ body {
   display: flex;
   flex-direction: column;
   margin-left: 5%;
-  margin-right: 5%;
-  margin-bottom: 2%;
+  margin-right: 5%; 
+  margin-bottom: 2%; 
 }
 
 /* Another tablet breakpoint is maximum width of 1024px */
 @media only screen and (min-width: 1024px) {
   .container {
-    width: 50%;
-    /* margin 10% (.avatar 40%)*/
-    margin-top: 140px;
+    width: 50%; /* margin 10% (.avatar 40%)*/  
+    margin-top: 140px;    
     float: right;
   }
 }
